--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-    "name": "NodeBoilerplate"
-  , "version": "0.0.3"
+    "name": "TheVideoWar"
+  , "version": "0.0.1"
   , "author": "Eric Clifford"
   , "description": ""
   , "private": true
   , "dependencies": {
   	  "coffee-script": "1.1.3"
+    , "everyauth": "0.2.23"
     , "express": "2.5.0"
-    , "jade": ">= 0.0.1"
     , "file": "0.1.1"
-    , "glob": "2.0.9"
+    , "jade": ">= 0.0.1"
+    , "mongoose": "2.3.13"
+    , "nap": "0.1.0"
     , "settings": "0.0.2"
-    , "underscore": "1.2.2"
-    , "watch-tree": "0.1.1"
-    , "instagram-node-lib": "0.0.7"
-    , "expresso": "0.9.2"
     , "should": "0.3.2"
+    , "underscore": "1.2.2"
   }
 }
