--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-    "name": "TheVideoWar"
-  , "version": "0.0.1"
-  , "author": "Eric Clifford"
-  , "description": ""
-  , "private": true
-  , "dependencies": {
-  	  "coffee-script": "1.1.3"
-    , "everyauth": "0.2.23"
-    , "express": "2.5.0"
-    , "file": "0.1.1"
-    , "jade": ">= 0.0.1"
-    , "mongoose": "2.3.13"
-    , "nap": "0.1.0"
-    , "settings": "0.0.2"
-    , "should": "0.3.2"
-    , "underscore": "1.2.2"
-  }
+  "name": "TheVideoWar",
+  "version": "0.0.1",
+  "author": "Eric Clifford",
+  "description": "Video War Site",
+  "private": true,
+  "dependencies": {
+    "coffee-script": "1.1.3",
+    "everyauth": "0.2.23",
+    "express": "2.5.0",
+    "file": "0.1.1",
+    "jade": ">= 0.0.1",
+    "mongoose": "2.3.13",
+    "nap": "0.1.0",
+    "settings": "0.0.2",
+    "should": "0.3.2",
+    "underscore": "1.2.2"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "devDependencies": {},
+  "engines": {
+    "node": "*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/eclifford/Node-Video-War.git"
+  },
+  "main": "server.js"
 }
